--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 </head>
 <body>
 
+  <h2>Jonathan's Bookmarklets</h2>
+
+  <p>
+  Original code found in my <a href="https://github.com/jpalardy/bookmarklets">bookmarklets</a> project on github.
+  </p>
+
+  <p>To "install", drag a bookmarklet link into your toolbar.</p>
+  <p>To run, simply click on the bookmark on the webpages it is indented to run on.</p>
+  <p>To "uninstall", simply delete the bookmark.</p>
+
+  <h2>Bookmarklets</h2>
+
   <ul>
     <li>
       <a href="javascript:(function()%7Bvar%20id%3D%22c8f38bbf013e6f254dfe129984188c9a2646b793%22%2Cd%3Ddocument%2Cstyle%3Dd.getElementById(id)%3Bstyle%3Fd.head.removeChild(style)%3A(style%3Dd.createElement(%22style%22)%2Cstyle.innerHTML%3D%22rt%20%7B%20visibility%3A%20hidden%3B%20%7D%22%2Cstyle.id%3Did%2Cd.head.appendChild(style))%3B%7D)()">toggle ruby</a> — Toggle's the visibility of &lt;rt&gt; tags.
