--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="/css/base.css" type="text/css" media="screen, projection" />
   <title>Bookmarklets</title>
 </head>
-<body>
+<body style="padding-left: 20px">
 
   <h2>Jonathan's Bookmarklets</h2>
 
