--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <li>
       <a href="javascript:(function()%7Bvar%20id%3D%22c8f38bbf013e6f254dfe129984188c9a2646b793%22%2Cd%3Ddocument%2Cstyle%3Dd.getElementById(id)%3Bstyle%3Fd.head.removeChild(style)%3A(style%3Dd.createElement(%22style%22)%2Cstyle.innerHTML%3D%22rt%20%7B%20visibility%3A%20hidden%3B%20%7D%22%2Cstyle.id%3Did%2Cd.head.appendChild(style))%3B%7D)()">toggle ruby</a> — Toggle's the visibility of &lt;rt&gt; tags.
     </li>
+    <li>
+      <a href="javascript:(function()%7Bvar%20id%3D%22d31320f0a68c10ee2dea47aa32b7d865d4e54e10%22%2Cd%3Ddocument%2Cstyle%3Dd.getElementById(id)%3Bstyle%3Fd.head.removeChild(style)%3A(style%3Dd.createElement(%22style%22)%2Cstyle.innerHTML%3D%22.card%20.q%20%7B%20font-size%3A%20300%25%20%7D%22%2Cstyle.id%3Did%2Cd.head.appendChild(style))%3B%7D)()">memora large</a> — Toggle large size of memora questions.
+    </li>
   </ul>
 
 </body>
