--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <li>
       <a href="javascript:(function()%7Bvar%20id%3D%22d31320f0a68c10ee2dea47aa32b7d865d4e54e10%22%2Cd%3Ddocument%2Cstyle%3Dd.getElementById(id)%3Bstyle%3Fd.head.removeChild(style)%3A(style%3Dd.createElement(%22style%22)%2Cstyle.innerHTML%3D%22.card%20.text%20%7B%20font-size%3A%20300%25%20%7D%22%2Cstyle.id%3Did%2Cd.head.appendChild(style))%3B%7D)()">memora large</a> — Toggle large size of memora questions.
     </li>
+    <li>
+      <a href="javascript:(function()%7B%5B%5D.filter.call(document.querySelectorAll(%22a%22)%2Cfunction(e)%7Breturn%20e.href.indexOf(%22amazon.com%22)%3E%3D0%7D).forEach(function(e)%7Be.href%3De.href.replace(%2Famazon.com%2F%2C%22amazon.ca%22)%7D)%3B%7D)()">amazon-ca</a> — Switch amazon.com links to amazon.ca.
+    </li>
   </ul>
 
 </body>
