add crash! bookmarklet

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <li>
       <a href="javascript:(function()%7B%5B%5D.filter.call(document.querySelectorAll(%22a%22)%2Cfunction(e)%7Breturn%20e.href.indexOf(%22amazon.com%22)%3E%3D0%7D).forEach(function(e)%7Be.href%3De.href.replace(%2Famazon.com%2F%2C%22amazon.ca%22)%7D)%3B%7D)()">amazon-ca</a> — Switch amazon.com links to amazon.ca.
     </li>
+    <li>
+      <a href="chrome://crash">crash!</a> — Crash a Chrome tab: useful when things get out of hands.
+    </li>
   </ul>
 
 </body>
