memora large: use better Japanese font

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="javascript:(function()%7B%22use%20strict%22%3Bvar%20id%3D%22c8f38bbf013e6f254dfe129984188c9a2646b793%22%2Cd%3Ddocument%2Cstyle%3Dd.getElementById(id)%3Bstyle%3Fd.head.removeChild(style)%3A((style%3Dd.createElement(%22style%22)).innerHTML%3D%22rt%20%7B%20visibility%3A%20hidden%3B%20%7D%22%2Cstyle.id%3Did%2Cd.head.appendChild(style))%3B%7D)()">toggle ruby</a> — Toggle's the visibility of &lt;rt&gt; tags.
     </li>
     <li>
-      <a href="javascript:(function()%7B%22use%20strict%22%3Bvar%20id%3D%22d31320f0a68c10ee2dea47aa32b7d865d4e54e10%22%2Cd%3Ddocument%2Cstyle%3Dd.getElementById(id)%3Bstyle%3Fd.head.removeChild(style)%3A((style%3Dd.createElement(%22style%22)).innerHTML%3D%22.card%20.text%20%7B%20font-size%3A%20300%25%20%7D%22%2Cstyle.id%3Did%2Cd.head.appendChild(style))%3B%7D)()">memora large</a> — Toggle large size of memora questions.
+      <a href="javascript:(function()%7B%22use%20strict%22%3Bvar%20id%3D%22d31320f0a68c10ee2dea47aa32b7d865d4e54e10%22%2Cd%3Ddocument%2Cstyle%3Dd.getElementById(id)%3Bif(style)d.head.removeChild(style)%3Belse%7Bvar%20_style%3Dd.createElement(%22style%22)%3B_style.innerHTML%3D%22.card%20.text%20%7B%20font-size%3A%20300%25%3B%20font-family%3A%20Hiragino%20Kaku%20Gothic%20ProN%20%7D%22%2C_style.id%3Did%2Cd.head.appendChild(_style)%7D%7D)()">memora large</a> — Toggle large size of memora questions.
     </li>
     <li>
       <a href="javascript:(function()%7B%22use%20strict%22%3B%5B%5D.filter.call(document.querySelectorAll(%22a%22)%2Cfunction(e)%7Breturn%200%3C%3De.href.indexOf(%22amazon.com%22)%7D).forEach(function(e)%7Be.href%3De.href.replace(%2Famazon.com%2F%2C%22amazon.ca%22)%7D)%3B%7D)()">amazon-ca</a> — Switch amazon.com links to amazon.ca.
