Soften and simplify wording

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   Original code found in my <a href="https://github.com/jpalardy/bookmarklets">bookmarklets</a> project on github.
   </p>
 
-  <p>To "install", drag a bookmarklet link into your toolbar.</p>
-  <p>To run, simply click on the bookmark on the webpages it is indented to run on.</p>
-  <p>To "uninstall", simply delete the bookmark.</p>
+  <p>To "install", drag a bookmarklet link into your browser toolbar.</p>
+  <p>To run, click on the bookmark while on the webpages it is indented to run on.</p>
+  <p>To "uninstall", delete the bookmark.</p>
 
   <h2>Bookmarklets</h2>
 
