--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       <a href="javascript:(function()%7B%22use%20strict%22%3Bfunction%20_toConsumableArray(r)%7Bif(Array.isArray(r))%7Bfor(var%20a%3D0%2Ce%3DArray(r.length)%3Ba%3Cr.length%3Ba%2B%2B)e%5Ba%5D%3Dr%5Ba%5D%3Breturn%20e%7Dreturn%20Array.from(r)%7D%5B%5D.concat(_toConsumableArray(document.querySelectorAll(%22a%22))).filter(function(r)%7Breturn%200%3C%3Dr.href.indexOf(%22amazon.com%22)%7D).forEach(function(r)%7Br.href%3Dr.href.replace(%2Famazon.com%2F%2C%22amazon.ca%22)%7D)%3B%7D)()">amazon-ca</a> — Switch amazon.com links to amazon.ca.
     </li>
     <li>
+      <a href="javascript:(function()%7B%22use%20strict%22%3Bfunction%20_toConsumableArray(r)%7Bif(Array.isArray(r))%7Bfor(var%20o%3D0%2Ct%3DArray(r.length)%3Bo%3Cr.length%3Bo%2B%2B)t%5Bo%5D%3Dr%5Bo%5D%3Breturn%20t%7Dreturn%20Array.from(r)%7D%5B%5D.concat(_toConsumableArray(document.querySelectorAll(%22a%22))).forEach(function(r)%7Br.style%3D%22background%3A%20yellow%22%7D)%3B%7D)()">highlight-yellow</a> — Highlight all links.
+    </li>
+    <li>
       <a href="chrome://crash">crash!</a> — Crash a Chrome tab: useful when things get out of hands.
     </li>
   </ul>
